workloads/argocd/manifests/base/ingressroute.yaml
---
# yamllint disable rule:line-length
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.fh.dronen.house`)
      priority: 10
      services:
        - name: argocd-server
          scheme: http
          port: 80
    - kind: Rule
      match: Host(`argocd.fh.dronen.house`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-cert
